// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tag matches snapshot correctly 1`] = `
<div
  class="mc-c-eijiWX mc-c-eijiWX-bFdWuZ-size-md mc-c-eijiWX-jroqRg-color-primary"
>
  test
</div>
`;

exports[`tagGroup matches snapshot correctly 1`] = `
<div
  class="mc-c-eijiWX mc-c-eijiWX-gsTuFi-size-lg mc-c-eijiWX-jroqRg-color-primary"
>
  Abc
</div>
`;
